--- a/contact.html
+++ b/contact.html
@@ -4,88 +4,28 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact - MEDYRA</title>
+<link rel="icon" type="image/png" href="logo.png">
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  (function(){
+    emailjs.init("y-NA0J29JT2tMENHP"); // Remplace par ton public key EmailJS
+  })();
+</script>
 <style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    color: white;
-    text-align: center;
-    overflow-x: hidden;
-    height: 100vh;
-    background: url('fond.png') no-repeat center center;
-    background-size: cover;
-    position: relative;
-  }
-  body::before {
-    content: "";
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(80,0,120,0.6);
-    z-index: -1;
-  }
-  h1, form, #form-success {
-    opacity: 0;
-    transform: translateY(-30px);
-    animation: fadeIn 1s forwards;
-  }
-  h1 { animation-delay: 0.2s; }
-  form { animation-delay: 0.4s; }
-  #form-success { animation-delay: 0.6s; }
-  @keyframes fadeIn {
-    to { opacity: 1; transform: translateY(0); }
-  }
-  form { display: inline-block; margin-top: 50px; }
-  input, textarea, button {
-    padding: 12px;
-    margin: 10px 0;
-    border-radius: 8px;
-    border: none;
-    width: 300px;
-    max-width: 90%;
-    font-size: 16px;
-  }
-  button {
-    background: black;
-    color: white;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  button:hover { background: #ff00ff; }
-  #form-success { color: #ff66ff; margin-top: 15px; display: none; }
-  .back-btn {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    padding: 12px 25px;
-    background: rgba(0,0,0,0.8);
-    border: 2px solid #b400ff;
-    border-radius: 12px;
-    color: white;
-    font-weight: bold;
-    font-size: 16px;
-    cursor: pointer;
-    text-shadow: 0 0 5px #ff66ff, 0 0 10px #b400ff;
-    box-shadow: 0 0 15px #ff66ff, 0 0 25px #b400ff;
-    transition: 0.3s;
-    z-index: 1000;
-  }
-  .back-btn::before {
-    content: "";
-    position: absolute;
-    top: -20px; bottom: -20px;
-    left: -20px; right: -20px;
-  }
+  body { margin:0; font-family:Arial,sans-serif; color:white; text-align:center; background:url('fond.png') center/cover no-repeat; height:100vh; }
+  body::before { content:""; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(80,0,120,0.6); z-index:-1; }
+  form { display:inline-block; margin-top:50px; }
+  input,textarea,button { padding:12px;margin:10px 0;border-radius:8px;border:none;width:300px; max-width:90%; font-size:16px; }
+  button { background:black; color:white; cursor:pointer; transition:0.3s; }
+  button:hover { background:#ff00ff; }
+  #form-success { color:#ff66ff; margin-top:15px; display:none; }
 </style>
 </head>
 <body>
 
-<button class="back-btn" onclick="history.back()">← Retour</button>
-
 <h1>✉️ Contactez-nous</h1>
 
-<!-- Formulaire envoyé vers Getform -->
-<form id="contact-form" action="https://getform.io/f/{https://getform.io/f/bvrmneeb}" method="POST">
+<form id="contact-form">
   <input type="email" name="email" placeholder="Votre adresse email" required><br>
   <input type="text" name="pseudo" placeholder="Votre pseudo" required><br>
   <textarea name="message" placeholder="Votre message" rows="5" required></textarea><br>
@@ -95,25 +35,17 @@
 <p id="form-success">✅ Message envoyé avec succès !</p>
 
 <script>
-const form = document.getElementById("contact-form");
-const successMsg = document.getElementById("form-success");
-
-form.addEventListener("submit", function(e){
+document.getElementById('contact-form').addEventListener('submit', function(e){
   e.preventDefault();
+  const form = this;
 
-  fetch(form.action, {
-    method: 'POST',
-    body: new FormData(form)
-  })
-  .then(res => {
-    if(res.ok){
-      successMsg.style.display = "block";
+  emailjs.sendForm('service_6uv3ezq','template_4agazkl', form)
+    .then(() => {
+      document.getElementById('form-success').style.display='block';
       form.reset();
-    } else {
-      alert("Erreur lors de l'envoi du message !");
-    }
-  })
-  .catch(err => console.error(err));
+    }, (err) => {
+      alert("Erreur d'envoi: " + JSON.stringify(err));
+    });
 });
 </script>
 
