--- a/indexPC.html
+++ b/indexPC.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MEDYRA - Gaming</title>
-  <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
 
@@ -41,7 +40,6 @@
       background: rgba(20, 0, 40, 0.8);
       backdrop-filter: blur(10px);
       border-bottom: 2px solid #b400ff;
-      box-shadow: 0 0 15px #ff00ff;
       position: relative;
       z-index: 50;
     }
@@ -49,13 +47,11 @@
     .nav-title {
       font-size: 22px;
       color: #ffb3ff;
-      text-shadow: 0 0 10px #ff00ff;
     }
 
     nav .logo img {
       height: 50px;
       width: auto;
-      filter: drop-shadow(0 0 10px #ff00ff);
     }
 
     nav ul {
@@ -68,14 +64,12 @@
     nav ul li a {
       text-decoration: none;
       color: white;
-      text-shadow: 0 0 8px #ff66ff;
       transition: 0.3s;
       cursor: pointer;
     }
 
     nav ul li a:hover {
       color: #ff66ff;
-      text-shadow: 0 0 15px #ff00ff;
     }
 
     /* ==== DROPDOWN ==== */
@@ -94,7 +88,6 @@
       list-style: none;
       padding: 10px 0;
       min-width: 180px;
-      box-shadow: 0 0 15px #ff00ff;
       font-size: 20px;
     }
 
@@ -122,7 +115,6 @@
       color: white;
       opacity: 0;
       transform: translateY(-50px);
-      text-shadow: 0 0 25px #ff00ff, 0 0 50px #b400ff;
       transition: all 1s ease-out;
     }
 
@@ -132,10 +124,6 @@
       animation: glow 2s infinite alternate 1s;
     }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 20px #ff66ff, 0 0 40px #b400ff; }
-      to   { text-shadow: 0 0 40px #ff00ff, 0 0 80px #b400ff; }
-    }
 
     /* ==== POPUP ==== */
     .overlay {
@@ -162,7 +150,6 @@
       padding: 40px;
       border-radius: 20px;
       text-align: center;
-      box-shadow: 0 0 25px #ff00ff;
       color: white;
       transform: scale(0.7);
       opacity: 0;
@@ -177,7 +164,6 @@
 
     .popup h2 {
       font-size: 28px;
-      text-shadow: 0 0 15px #ff00ff;
     }
 
     .popup p {
@@ -198,7 +184,6 @@
 
     .popup button:hover {
       background: #ff00ff;
-      box-shadow: 0 0 15px #ff00ff, 0 0 30px #b400ff;
     }
 
     /* ==== FLOATING ICONS ==== */
@@ -215,7 +200,6 @@
     .floating-socials a {
       color: white;
       font-size: 40px;
-      text-shadow: 0 0 10px #ff66ff;
       animation: float 2s ease-in-out infinite;
       transition: 0.3s;
     }
@@ -229,7 +213,7 @@
       50% { transform: translateY(-10px); }
     }
 
-    /* ==== SECTION SERVEUR / LORE / EQUIPE / CONTACT ==== */
+    /* ==== SECTION SERVEUR ==== */
     .section {
       display: none;
       justify-content: center;
@@ -248,70 +232,88 @@
 
     .section p strong {
       color: #ff66ff;
-      text-shadow: 0 0 15px #ff00ff;
     }
 
-    /* ==== L'EQUIPE ==== */
-    #equipe h2, #contact h2 {
-      font-size: 32px;
-      color: #ff66ff;
-      margin-bottom: 30px;
-      text-shadow: 0 0 15px #b400ff;
+    /* ==== HAMBURGER ==== */
+    .hamburger {
+      display: none;
+      font-size: 30px;
+      cursor: pointer;
     }
 
-    .team-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 30px;
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
+    /* ==== RESPONSIVE ==== */
+    @media (max-width: 1024px) {
+      nav {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px 20px;
+      }
 
-    .team-member {
-      background: rgba(30,0,60,0.85);
-      border-radius: 15px;
-      padding: 20px;
-      color: white;
-      box-shadow: 0 0 20px #ff00ff;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .team-member:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 30px #ff66ff;
-    }
-
-    .team-member img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 15px;
-      border: 3px solid #b400ff;
-    }
-
-    .team-member h3 {
-      margin-bottom: 5px;
-      font-size: 20px;
-      color: #ffccff;
-    }
-
-    .team-member p {
-      font-size: 16px;
-      color: #fff;
-    }
+.nav-title .subtitle {
+  color: #ffccff;
+  font-size: 18px;
+  margin-left: 8px;
 }
+
+@media (max-width: 600px) {
+  .nav-title {
+    text-align: center;
+    line-height: 1.1;
+  }
+
+  .nav-title .subtitle {
+    display: block;
+    font-size: 16px;
+    margin-left: 0;
+    margin-top: 4px;
+  }
+}
+
+      .hamburger {
+        display: block;
+        color: white;
+      }
+
+      nav ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background: rgba(30, 0, 60, 0.95);
+        border-top: 1px solid #b400ff;
+        position: absolute;
+        top: 70px;
+        left: 0;
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      .hero h1 { font-size: 40px; }
+      .section { font-size: 20px; }
+    }
+
+    @media (max-width: 600px) {
+      .hero h1 { font-size: 28px; }
+      .section { font-size: 16px; padding: 0 10px; }
+      .popup h2 { font-size: 20px; }
+      .popup p { font-size: 14px; }
+      .popup button { font-size: 14px; padding: 8px 18px; }
+      .floating-socials a { font-size: 28px; }
+      nav ul li.dropdown ul.dropdown-menu li a {
+    font-size: 24px; /* taille plus grande pour mobile */
+    }
   </style>
 </head>
 
 <body>
   <nav>
     <div class="nav-title">
-      🌸🌺 MEDYRA 🌺🌸 
-      <span class="subtitle">Enjoy experience</span>
-    </div>
+  🌸🌺 MEDYRA 🌺🌸 
+  <span class="subtitle">Enjoy experience</span>
+</div>
     <div class="logo"><img src="logo.png" alt="MEDYRA Logo"></div>
+    <div class="hamburger"><i class="fas fa-bars"></i></div>
 
     <ul>
       <li><a id="btn-accueil">Accueil</a></li>
@@ -324,8 +326,8 @@
         </ul>
       </li>
       <li><a id="btn-lore">Lore</a></li>
-      <li><a id="btn-equipe">L'équipe</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#">L'équipe</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </nav>
 
@@ -336,7 +338,7 @@
   <section class="section" id="serveur">
     <p>
       💫 <strong>Medyra</strong> est un <strong>serveur convivial</strong> rempli d’aventures et de fun ! 💫<br><br>
-      🌍 Explore les incroyables maps inspirées des jeux <strong>"the walking dead" dévellopés par telltale games et repris par skybound games</strong> 🧟‍♂️,<br>
+      🌍 Explore les incroyables maps inspirées de <strong>"The Walking Dead"</strong> 🧟‍♂️,<br>
       🏰 Participe à des <strong>événements épiques</strong> sur la map de <strong>Fort Boyard</strong> 💪,<br>
       💬 Détends-toi dans le <strong>Lobby</strong>, rencontre d’autres joueurs et crée-toi une équipe ! 🎮<br><br>
       ✨ Alors... <strong>rejoins l’aventure dès maintenant !</strong> 🚀
@@ -355,7 +357,7 @@
       En <strong>2024</strong>, le fort est entièrement <strong>remis à neuf</strong> 🛠️ grâce à des plans à taille réelle  
       et aux cellules officielles de chaque saison, atteignant sa <em>version bêta</em> ✨.<br><br>
 
-      Aujourd’hui, le fort s’agrandit avec des <strong>maps visite inspirés de "the walking dead" dévellopés par telltale games et repris par skybound games</strong>, créées par des <strong>builders talentueux</strong> 🧱.  
+      Aujourd’hui, le fort s’agrandit avec des <strong>maps visite The Walking Dead</strong> créées par des <strong>builders talentueux</strong> 🧱.  
       Le serveur devient alors public sous le nom de <strong>MEDYRA</strong> — inspiré de <em>Médusa</em>,  
       la créature mythologique marine 🐍🌊.<br><br>
 
@@ -366,32 +368,6 @@
       <em>"Ce qui compte, ce n’est pas le résultat, mais la distance parcourue."</em><br><br>
       💖 <strong>MEDYRA — Enjoy experience.</strong> 💖
     </p>
-  </section>
-
-  <section class="section" id="equipe">
-    <h2>👥 Notre Équipe</h2>
-    <div class="team-container">
-      <div class="team-member">
-        <img src="ppGlooper.jpg" alt="Membre 1">
-        <h3>Glooper99</h3>
-        <p>fondateur du projet </p>
-      </div>
-      <div class="team-member">
-        <img src="ppNatyan.jpeg" alt="Membre 2">
-        <h3>Natyan</h3>
-        <p>Co-Fondateur et STAFF </p>
-      </div>
-      <div class="team-member">
-        <img src="pp3.jpg" alt="Membre 2">
-        <h3>Arrkey</h3>
-        <p>Encadrement et STAFF </p>
-      </div>
-      <div class="team-member">
-        <img src="pp4.png" alt="Membre 2">
-        <h3>MrBaguette07</h3>
-        <p>gestion serveur</p>
-      </div>
-    </div>
   </section>
 
   <div id="overlay" class="overlay">
@@ -413,8 +389,6 @@
       const hero = document.getElementById("accueil");
       const serveur = document.getElementById("serveur");
       const lore = document.getElementById("lore");
-      const equipe = document.getElementById("equipe");
-      const contact = document.getElementById("contact");
       const heroTitle = document.querySelector(".hero h1");
       const floatingIcons = document.querySelector(".floating-socials");
       const menu = document.querySelector("nav ul");
@@ -427,49 +401,32 @@
       window.fermerPopup = function() {
         overlay.classList.remove("show");
         hero.style.display = "flex";
-        setTimeout(() => heroTitle.classList.add("show"), 300);
+        setTimeout(() => heroTitle.classList.add("show"), 300); // apparition douce du texte
         floatingIcons.style.display = "flex";
       };
 
       // Navigation
-      document.getElementById("btn-accueil").addEventListener("click", () => {
-        hero.style.display = "flex";
-        serveur.style.display = "none";
-        lore.style.display = "none";
-        equipe.style.display = "none";
-        contact.style.display = "none";
-      });
+document.getElementById("btn-accueil").addEventListener("click", () => {
+  hero.style.display = "flex";
+  serveur.style.display = "none";
+  lore.style.display = "none";
+});
 
-      document.getElementById("btn-serveur").addEventListener("click", () => {
-        hero.style.display = "none";
-        serveur.style.display = "flex";
-        lore.style.display = "none";
-        equipe.style.display = "none";
-        contact.style.display = "none";
-      });
+document.getElementById("btn-serveur").addEventListener("click", () => {
+  hero.style.display = "none";
+  serveur.style.display = "flex";
+  lore.style.display = "none";
+});
 
-      document.getElementById("btn-lore").addEventListener("click", () => {
-        hero.style.display = "none";
-        serveur.style.display = "none";
-        lore.style.display = "flex";
-        equipe.style.display = "none";
-        contact.style.display = "none";
-      });
+document.getElementById("btn-lore").addEventListener("click", () => {
+  hero.style.display = "none";
+  serveur.style.display = "none";
+  lore.style.display = "flex";
+});
 
-      document.getElementById("btn-equipe").addEventListener("click", () => {
-        hero.style.display = "none";
-        serveur.style.display = "none";
-        lore.style.display = "none";
-        equipe.style.display = "flex";
-        contact.style.display = "none";
-      });
-
-      document.getElementById("btn-contact").addEventListener("click", () => {
-        hero.style.display = "none";
-        serveur.style.display = "none";
-        lore.style.display = "none";
-        equipe.style.display = "none";
-        contact.style.display = "flex";
+      // Menu hamburger
+      hamburger.addEventListener("click", () => {
+        menu.classList.toggle("show");
       });
     });
   </script>
